--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -67,5 +67,12 @@
     "titleBot": "Verify Bot",
     "titleEmail": "Verify Account",
     "titlePhone": "Verify Phone"
+  },
+  "conversationJoin": {
+    "loading": "Verifying link…",
+    "description": "Join a public conversation",
+    "errorDescription": "Please ask the owner of the conversation.",
+    "errorTitle": "Something went wrong",
+    "title": "Join conversation"
   }
 }
