--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -71,7 +71,7 @@
   "conversationJoin": {
     "loading": "Verifying link…",
     "description": "Audio and video conferencing, text messaging, file sharing, and screen sharing, all end-to-end-encrypted.",
-    "wirelessHeadline": "Don't have a {{brandName}} account?",
+    "wirelessHeadline": "Don't want to create a {{brandName}} account?",
     "wirelessLink": "Join the conversation as a temporary guest",
     "wirelessNote": "(access expires after 24 hours)",
     "errorConversationNotFoundDescription": "The link to this group conversation expired or the conversation was set to private.",
