--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -91,7 +91,7 @@
   "userProfile": {
     "title": "You have been invited to view a user profile in {{brandName}}",
     "description": "Audio and video conferencing, text messaging, file sharing, and screen sharing, all end-to-end-encrypted.",
-    "downloadApp": "Download Wire",
+    "downloadApp": "Download {{brandName}}",
     "openWithApp": "Open in App",
     "openWithBrowser": "Open in Browser"
   }
