--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -72,9 +72,8 @@
   "conversationJoin": {
     "loading": "Verifying link...",
     "description": "Audio and video conferencing, text messaging, file sharing, and screen sharing, all end-to-end-encrypted.",
-    "wirelessHeadline": "Don't want to create a {{brandName}} account?",
-    "wirelessLink": "Join the conversation as a temporary guest",
-    "wirelessNote": "(access expires after 24 hours)",
+    "conversationLocation": "The conversation takes place on {{domain}}",
+    "wirelessHeadline": "Don't have a {{brandName}} account? You can join as temporary guest in the browser.",
     "errorConversationNotFoundDescription": "The link to this group conversation has expired or is no longer valid.",
     "errorConversationNotFoundHeadline": "Conversation not found",
     "title": "You have been invited to join a conversation in {{brandName}}",
@@ -84,10 +83,7 @@
     "cannotJoinOnMobile": "At the moment, you can't join this conversation on your mobile device. Please open this link on your desktop instead."
   },
   "conversationJoinSelfHosted": {
-    "title": "You have been invited to join a Wire conversation",
-    "wirelessHeadline": "The conversation is hosted on {{domain}}.",
-    "wirelessHaveAccount": "Don't have a Wire account on this domain?",
-    "wirelessLink": "Join as Temporary Guest"
+    "title": "You have been invited to join conversation in Wire"
   },
   "userProfile": {
     "title": "You have been invited to view a user profile in {{brandName}}",
