feat(user-migration): add pages to migrate privat to team user [WPB-11128]

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -89,5 +89,49 @@
     "downloadApp": "Download {{brandName}}",
     "openWithApp": "Open in App",
     "openWithBrowser": "Open in Browser"
+  },
+  "migration": {
+    "errorLogin": "Unable to login with these credentials.",
+    "wrongCredentialsError": "Please enter valid credentials.",
+    "passwordLabel": "Password (personal account)",
+    "passwordPlaceholder": "Password",
+    "continueBtnText": "Continue",
+    "layoutSubHeader": "The most secure collaboration",
+    "layoutListHeader1": "Use the same level of security and enjoy extra features and benefits for free, like:",
+    "layoutListHeader2": "What’s next",
+    "layoutListItem1": "Join video conferences",
+    "layoutListItem2": "Guest rooms and external communication",
+    "layoutListItem3": "Availability status",
+    "layoutListItem4": "Option to upgrade to Wire for Enterprise to get full collaboration benefits",
+    "layoutListItem5": "Open Wire and get connected with your new team members",
+    "layoutListItem6": "Enjoy conference calls with a single click",
+    "welcomePageHeader": "Congratulations, you joined your team on Wire!",
+    "welcomePageSubHeader": "Welcome to <b>{{teamName}}</b><br/> We transferred your personal account into a team member account.",
+    "welcomePageAppOpenText": "Open Wire",
+    "welcomePageTMOpenText": "Open Team Management",
+    "welcomePageOr": "or",
+    "confirmPageHeader": "Join your team",
+    "confirmPageSubHeader": "To ensure a secure transfer and prevent unauthorized access, please enter the password of your personal account again.",
+    "termsPageHeader": "Join your team",
+    "termsPageSubHeader": "You’re about to join the team.",
+    "termsPageListHeader": "Things to know",
+    "termsPageListItem1": "Your <b>personal account will be transferred</b> to a team account.",
+    "termsPageListItem2": "<b>This change is permanent</b> and irrevocable.",
+    "termsPageListItem3": "<b>One team limit:</b> You can only be part of one team with this email address.",
+    "termsPageListItem4": "<b>You keep your contacts</b> and your conversation history.",
+    "termsPageListItem5": "<b>Profile details:</b> You keep your email, profile name, and username, as well as your password and profile picture.",
+    "termsPageAccountManagerHeader": "Account Management",
+    "termsPageAccountManagerText": "As you will be part of a team, the admin can remove you from the team. In that case, you will immediately lose access to your account, contacts, history, and username.",
+    "termsPageRecommendationsHeader": "We recommend to",
+    "termsPageRecommendationItem1": "Verify the admin’s identity before accepting, and if you’re unsure, close this window.",
+    "termsPageRecommendationItem2": "Back up your contacts",
+    "termsPageMigrationTerms": "I agree to the migration terms and understand that this change is irreversible.",
+    "termsPageTermsOfUse": "I accept the",
+    "termsPageTermsOfUseLink": "Terms of Use (Business).",
+    "invitationPageHeader": "Join your team",
+    "invitationPageSubHeader": "Log in with your personal account's email or username and password.",
+    "invitationPagLoginLabel": "Email or username",
+    "emailOrUsernamePlaceholder": "Enter email or username",
+    "forgotPassword": "forgot password?"
   }
 }
